Closed
Bug 1451790
Opened 8 years ago
Closed 8 years ago
Set Timer Resolution to 1ms with Jitter
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla61
People
(Reporter: tjr, Assigned: tjr)
References
(Depends on 1 open bug, Blocks 1 open bug)
Details
Attachments
(2 files)
|
59 bytes,
text/x-review-board-request
|
baku
:
review+
|
Details |
|
2.92 KB,
patch
|
RyanVM
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Per discussion today, our plan is to go with 1ms with Jitter for 60/61.
| Comment hidden (mozreview-request) |
Updated•8 years ago
|
status-firefox60:
--- → affected
status-firefox61:
--- → affected
tracking-firefox60:
--- → +
tracking-firefox61:
--- → +
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8965380 [details]
Bug 1451790 Set Time Precision to 1ms with Jitter
https://reviewboard.mozilla.org/r/234120/#review240588
Attachment #8965380 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/eebb8d4e91d1
Set Time Precision to 1ms with Jitter r=baku
Keywords: checkin-needed
| Assignee | ||
Comment 4•8 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]: We can reduce the time precision from 2ms to 1ms on release.
[User impact if declined]: We'll have Release set to 2ms time precision and we can make it lower.
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Just changing some constants
[String changes made/needed]: None
Attachment #8966304 -
Flags: approval-mozilla-beta?
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment 6•8 years ago
|
||
Comment on attachment 8966304 [details] [diff] [review]
1451790-beta.patch
Important mitigation needed for ESR60. Approved for 60.0b12.
Attachment #8966304 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•8 years ago
|
||
| bugherder uplift | ||
Comment 8•8 years ago
|
||
Setting qe-verify- based on Tom's assessment on manual testing needs (Comment 4) and the fact that this fix has automated tests.
Flags: qe-verify-
Updated•8 years ago
|
Component: DOM: Events → DOM
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•