Bug 1451790 Set Time Precision to 1ms with Jitter r=baku

MozReview-Commit-ID: 1uvEK2We4OQ